--- a/Tpl/User/userlist.html
+++ b/Tpl/User/userlist.html
@@ -1,29 +1,30 @@
 
-
-<div class="page-header">
-    <h2>用户列表</h2>
-</div>
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>用户名</th>
-            <th>邮箱</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <volist name="users" id="user">
+<div class="container">
+    <div class="page-header">
+        <h2>用户列表</h2>
+    </div>
+    <table class="table table-hover">
+        <thead>
             <tr>
-                <td>{$key+1}</td>
-                <td>{$user.username}</td>
-                <td>{$user.email}</td>
-                <td>
-                    <a href="__URL__/userinfo?id={$user.id}" class="btn btn-info btn-xs">详情</a>
-                    <a href="__URL__/deleteuser?id={$user.id}" class="btn btn-info btn-xs">删除</a>
-                </td>
+                <th>#</th>
+                <th>用户名</th>
+                <th>邮箱</th>
+                <th></th>
             </tr>
-        </volist>
-    </tbody>
-</table>    
+        </thead>
+        <tbody>
+            <volist name="users" id="user">
+                <tr>
+                    <td>{$key+1}</td>
+                    <td>{$user.username}</td>
+                    <td>{$user.email}</td>
+                    <td>
+                        <a href="__URL__/userinfo?id={$user.id}" class="btn btn-info btn-xs">详情</a>
+                        <a href="__URL__/deleteuser?id={$user.id}" class="btn btn-info btn-xs">删除</a>
+                    </td>
+                </tr>
+            </volist>
+        </tbody>
+    </table>    
+</div>
 
