--- a/Tpl/layout.html
+++ b/Tpl/layout.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>抱石</title>
 
     <!-- Bootstrap -->
-    <load href='/sites/BaoShi/Public/bootstrap-3.2.0/css/bootstrap.css' />
+    <load href='/BaoShi/Public/bootstrap-3.2.0/css/bootstrap.css' />
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <load href='/sites/BaoShi/Public/jquery-1.11.1.min.js' />
+    <load href='/BaoShi/Public/jquery-1.11.1.min.js' />
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <load href='/sites/BaoShi/Public/bootstrap-3.2.0/js/bootstrap.js' />
+    <load href='/BaoShi/Public/bootstrap-3.2.0/js/bootstrap.js' />
+
+      <load href='/BaoShi/Public/css/min.css' />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,28 +22,102 @@
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body style="padding-top: 51px;">
+  <body>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">抱石</a>
-			</div>
-			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">影集列表</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div>
-	</nav>
+	<!--<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">-->
+		<!--<div class="container">-->
+			<!--<div class="navbar-header">-->
+				<!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">-->
+					<!--<span class="sr-only">Toggle navigation</span>-->
+					<!--<span class="icon-bar"></span>-->
+					<!--<span class="icon-bar"></span>-->
+					<!--<span class="icon-bar"></span>-->
+				<!--</button>-->
+				<!--<a class="navbar-brand" href="#">抱石</a>-->
+			<!--</div>-->
+			<!--<div id="navbar" class="collapse navbar-collapse">-->
+				<!--<ul class="nav navbar-nav">-->
+					<!--<li class="active"><a href="#">影集列表</a></li>-->
+					<!--<li><a href="#about">About</a></li>-->
+					<!--<li><a href="#contact">Contact</a></li>-->
+				<!--</ul>-->
+                <!--<ul class="nav navbar-nav navbar-right">-->
+                    <!--<li><a href="#">个人设置</a></li>-->
+                    <!--<li><a href="#">退出</a></li>-->
+                <!--</ul>-->
+			<!--</div>&lt;!&ndash;/.nav-collapse &ndash;&gt;-->
+		<!--</div>-->
+	<!--</nav>-->
+    <!-- navbar begin -->
+    <nav class="navbar" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+
+                <a href="https://laracasts.com/" class="navbar-brand logo">
+                    抱石
+                </a>
+            </div> <!-- navbar-header -->
+
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+
+                    <!-- Learn -->
+                    <li class="dropdown ">
+                        <a href="https://laracasts.com/lessons" class="navbar-link dropdown-toggle">Learn</a>
+                        <ul class="dropdown-menu">
+                            <li class=""><a href="https://laracasts.com/lessons">Lessons</a></li>
+                            <li class=""><a href="https://laracasts.com/series">Series</a></li>
+                            <li class=""><a href="https://laracasts.com/collections">Collections</a></li>
+                            <li class=""><a href="https://laracasts.com/index">Laracasts Index</a></li>
+                            <li class=""><a href="https://laracasts.com/latest">What's New</a></li>
+                        </ul>
+                    </li>
+
+                    <!-- Discuss -->
+                    <li class="dropdown ">
+                        <a href="https://laracasts.com/discuss" class="navbar-link dropdown-toggle">Discuss</a>
+                        <ul class="dropdown-menu">
+                            <li class=""><a href="https://laracasts.com/discuss">Forum</a></li>
+                            <li><a href="http://www.buzzsprout.com/11908/">Laravel Podcast</a></li>
+                            <li class=""><a href="https://laracasts.com/learn-with-jeffrey">Blog</a></li>
+                            <li><a href="http://facebook.com/laracasts">Facebook</a></li>
+                            <li><a href="http://twitter.com/laracasts">Twitter</a></li>
+                        </ul>
+                    </li>
+
+                    <!-- Deploy -->
+                    <li class="dropdown">
+                        <a href="https://forge.laravel.com/" class="navbar-link" target="_blank">Deploy</a>
+                    </li>
+
+                    <!-- Work -->
+                    <li id="navbar-link--work" class="dropdown">
+                        <a class="navbar-link" href="https://larajobs.com/?partner=36" target="_blank">Work</a>
+                    </li>
+
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="../User/info" class="navbar-link">个人信息</a>
+                        <ul class="dropdown-menu">
+                            <li class=""><a href="../User/head">上传头像</a></li>
+                            <li class=""><a href="../User/changePassword">修改密码</a></li>
+                        </ul>
+                    </li>
+                    <li class=""><a href="https://laracasts.com/login?return=https://laracasts.com/signup" class="navbar-link">退出</a></li>
+
+                </ul>
+            </div> <!-- collapse -->
+        </div> <!-- container -->
+    </nav>
+    <!-- navbar end -->
 
     {__CONTENT__}
     
