--- a/Tpl/Album/edit.html
+++ b/Tpl/Album/edit.html
@@ -1,4 +1,4 @@
-<load href='/sites/BaoShi/Public/css/album-edit.css' />
+<load href='/Public/css/album-edit.css' />
 
 <div class="container">
 	<div class="public-head-steps">
@@ -20,9 +20,9 @@
 			</div>
 			<div class="col-md-9">
 				<div class="row scene-photo">
-					<img src="/sites/BaoShi/Public/img/photo.svg" alt="..." class="img-rounded">
-					<img src="/sites/BaoShi/Public/img/photo.svg" alt="..." class="img-rounded">
-					<img src="/sites/BaoShi/Public/img/photo.svg" alt="..." class="img-rounded">
+					<img src="/Public/img/photo.svg" alt="..." class="img-rounded">
+					<img src="/Public/img/photo.svg" alt="..." class="img-rounded">
+					<img src="/Public/img/photo.svg" alt="..." class="img-rounded">
 				</div>
 				<div class="scene-tip">
 					<span class="scene-tip-word">
