--- a/Tpl/User/info.html
+++ b/Tpl/User/info.html
@@ -10,13 +10,13 @@
                 <div class="form-group">
                     <label for="username" class="col-sm-2 control-label">用户名:</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" id="username" >
+                        <input type="text" class="form-control" id="username" value="{$one.username}">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="email" class="col-sm-2 control-label">邮箱:</label>
                     <div class="col-sm-8">
-                        <input type="email" class="form-control" id="email" >
+                        <input type="email" class="form-control" id="email" value="{$one.email}" >
                     </div>
                 </div>
                 <!--<div class="form-group">-->
@@ -28,7 +28,7 @@
 
         </div>
         <div class="col-lg-6">
-            <img src="/BaoShi/Public/img/photo.svg" alt="..." class="img-rounded" style="width: 140px; height: 140px;">
+            <img src="{$one.head}" alt="..." class="img-rounded" style="width: 140px; height: 140px;">
         </div>
     </div>
 </div>
