--- a/Tpl/User/login.html
+++ b/Tpl/User/login.html
@@ -7,13 +7,13 @@
     <title>抱石</title>
 
     <!-- Bootstrap -->
-    <load href='/BaoShi/Public/bootstrap-3.2.0/css/bootstrap.css' />
+    <load href='/Public/bootstrap-3.2.0/css/bootstrap.css' />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <load href='/BaoShi/Public/jquery-1.11.1.min.js' />
+    <load href='/Public/jquery-1.11.1.min.js' />
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <load href='/BaoShi/Public/bootstrap-3.2.0/js/bootstrap.js' />
+    <load href='/Public/bootstrap-3.2.0/js/bootstrap.js' />
 
-    <load href='/BaoShi/Public/css/min.css' />
+    <load href='/Public/css/min.css' />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
