--- a/Tpl/User/register.html
+++ b/Tpl/User/register.html
@@ -7,13 +7,13 @@
     <title>抱石</title>
 
     <!-- Bootstrap -->
-    <load href='/BaoShi/Public/bootstrap-3.2.0/css/bootstrap.css' />
+    <load href='/Public/bootstrap-3.2.0/css/bootstrap.css' />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <load href='/BaoShi/Public/jquery-1.11.1.min.js' />
+    <load href='/Public/jquery-1.11.1.min.js' />
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <load href='/BaoShi/Public/bootstrap-3.2.0/js/bootstrap.js' />
+    <load href='/Public/bootstrap-3.2.0/js/bootstrap.js' />
 
-    <load href='/BaoShi/Public/css/min.css' />
+    <load href='/Public/css/min.css' />
 
 
 
@@ -141,6 +141,6 @@
     </div>
 </footer>
 
-<load href='/BaoShi/Public/js/register.js' />
+<load href='/Public/js/register.js' />
 </body>
 </html>
