--- a/Tpl/Album/uploadphoto.html
+++ b/Tpl/Album/uploadphoto.html
@@ -9,7 +9,12 @@
 		<div class="step-wrapper step-third"></div>
 	</div>
 	<div class="upload-container">
-
+        <div class="photo-block">
+            <img src="/Public/img/photo.svg" class="img-rounded" style="height: 110px; width: 110px;">
+        </div>
+        <div class="photo-block">
+            <img src="/Public/img/photo.svg" class="img-rounded" style="height: 110px; width: 110px;">
+        </div>
 	</div>
     <div class="upload-button-wrapper">
         <input type="file" name="file_upload" id="file_upload" />
@@ -27,10 +32,12 @@
 			'width': 160,
 			'removeCompleted': false,
 			'swf'      : '/Public/uploadify/uploadify.swf',
-			'uploader' : '__URL__/upload/'
-			/*'onUploadSuccess' : function(file, data, response) {
-	            alert('The file ' + file.name + ' was successfully uploaded with a response of ' + response + ':' + data);
-	        },
+			'uploader' : '__URL__/upload/',
+			'onUploadSuccess' : function(file, data, response) {
+                var html = '<div class="photo-block"><img src="'+data+'" class="img-rounded" style="height: 110px; width: 110px;"></div>';
+	            $(".upload-container").append(html);
+	        }
+            /*
 	        'onSelect': function(file){
 	        	alert('file name:' + file.name);
 	        }*/
