--- a/Tpl/Album/uploadphoto.html
+++ b/Tpl/Album/uploadphoto.html
@@ -18,6 +18,7 @@
 	</div>
     <div class="upload-button-wrapper">
         <input type="file" name="file_upload" id="file_upload" />
+        <a class="btn btn-default" href="{:U("Album/edit?albumId=$albumId")}" >下一步</a>
     </div>
 
     <!--<button class="btn btn-default" id="satrtUploadBtn" onclick="$('#file_upload').uploadify('upload', '*');">上传</button>-->
@@ -27,10 +28,14 @@
 	(function($){
 		$('#file_upload').uploadify({
 			'auto': true,
+			'method': 'POST',
 			'buttonText': '点击上传照片',
 			'height': 40,
 			'width': 160,
 			'removeCompleted': false,
+			'formData': {
+				'albumId': {$albumId}	
+			},
 			'swf'      : '/Public/uploadify/uploadify.swf',
 			'uploader' : '__URL__/upload/',
 			'onUploadSuccess' : function(file, data, response) {
