--- a/Tpl/layout.html
+++ b/Tpl/layout.html
@@ -93,7 +93,7 @@
 
                     <!-- Deploy -->
                     <li class="dropdown">
-                        <a href="../Album/albumlist" class="navbar-link" target="_blank">我的影集</a>
+                        <a href="{:U("Album/albumlist")}" class="navbar-link" target="_blank">我的影集</a>
                     </li>
 
                     <!-- Work -->
