--- a/Tpl/Photo/view.html
+++ b/Tpl/Photo/view.html
@@ -6,8 +6,10 @@
 <load href='/Public/css/photo-view.css' />
 
 <div class="row">
-	<div class="col-md-10">
-		<img src="{$photo.path}" class="photo-view-img">
+	<div class="col-xs-10 col-md-10">
+		<a href="#" class="thumbnail">
+			<img data-src="holder.js/100%x180" alt="..." src="{$photo.path}">
+		</a>
 	</div>
 	<div class="col-md-2">
 		照片信息
