--- a/Tpl/layout.html
+++ b/Tpl/layout.html
@@ -13,7 +13,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <load href='/Public/bootstrap-3.2.0/js/bootstrap.js' />
 
-      <load href='/Public/css/min.css' />
+    <load href='/Public/css/min.css' />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -68,7 +68,7 @@
                 <ul class="nav navbar-nav">
 
                     <!-- Learn -->
-                    <li class="dropdown ">
+                    <!-- <li class="dropdown ">
                         <a href="https://laracasts.com/lessons" class="navbar-link dropdown-toggle">Learn</a>
                         <ul class="dropdown-menu">
                             <li class=""><a href="https://laracasts.com/lessons">Lessons</a></li>
@@ -77,10 +77,10 @@
                             <li class=""><a href="https://laracasts.com/index">Laracasts Index</a></li>
                             <li class=""><a href="https://laracasts.com/latest">What's New</a></li>
                         </ul>
-                    </li>
+                    </li> -->
 
                     <!-- Discuss -->
-                    <li class="dropdown ">
+                    <!-- <li class="dropdown ">
                         <a href="https://laracasts.com/discuss" class="navbar-link dropdown-toggle">Discuss</a>
                         <ul class="dropdown-menu">
                             <li class=""><a href="https://laracasts.com/discuss">Forum</a></li>
@@ -89,7 +89,7 @@
                             <li><a href="http://facebook.com/laracasts">Facebook</a></li>
                             <li><a href="http://twitter.com/laracasts">Twitter</a></li>
                         </ul>
-                    </li>
+                    </li> -->
 
                     <!-- Deploy -->
                     <li class="dropdown">
@@ -97,9 +97,9 @@
                     </li>
 
                     <!-- Work -->
-                    <li id="navbar-link--work" class="dropdown">
+                    <!-- <li id="navbar-link--work" class="dropdown">
                         <a class="navbar-link" href="https://larajobs.com/?partner=36" target="_blank">Work</a>
-                    </li>
+                    </li> -->
 
                 </ul>
 
