--- a/Tpl/layout.html
+++ b/Tpl/layout.html
@@ -10,6 +10,8 @@
     <load href='/Public/bootstrap-3.2.0/css/bootstrap.css' />
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <load href='/Public/jquery-1.11.1.min.js' />
+
+      <load href='/Public/jquery.form.js' />
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <load href='/Public/bootstrap-3.2.0/js/bootstrap.js' />
 
